--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css"/>
+</head>
     <title>Weather</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row justify-content-center aling-items-center">
+            <div class="col-md-4">
+                <!--formulário -->
+                <form id="clima" method="post" class="shadow-lg p-3">
+                    <h4 class="text-primary">Pesquisa do Clima</h4>
+                    <div class="mb-3">
+                        <label for="cidade" class="form-label">Cidade</label>
+                        <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Insira a Cidade de Pesquisa" required autofocus/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="cep" class="form-label">CEP</label>
+                        <input type="text" class="form-control" id="cep" name="cep" placeholder="Ex: 13309320" pattern="[0-9]{8}" maxlength="8" onchange="atualizaForm()" tittle="Informe o CEP no formato 9999999999">
+                        <div class="spinner-border d-none" id="spinner"></div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label form="endereco" class="form-label">Endereço</label>
+                        <input type="text" class="form-control" id="endereco" name="endereco" placeholder="Endereço Completo">
+                    </div>
+                </label>
+                <button class="btn btn-success" id="salvar" type="submit">
+                    <i class="bi bi-save"></i>Salvar
+                </button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!--Carregando o JS-->
+    <script src="js/script.js"></script>
 </body>
 </html>
