--- a/index.html
+++ b/index.html
@@ -14,48 +14,45 @@
     <title>Weather</title>
 </head>
 <body>
-    <h1>AnJo do Tempo</h1>
     <div class="container">
-        <div class="pesquisar">
+        <div class="search-box">
             <i class="bx bxs-map"></i>
             <input type="text" placeholder="Insira a cidade" id="cidade">
             <button class="bx bx-search"></button>               
         </div>
-
         <div class="weather-box">
             <div class="box">
                 <div class="info-weather">
                     <div class="weather">
-                        <object data="images/vetores/none_day.svg" type="image/svg+xml" style="width:80%"></object> <!--img src="lnk">-->
-                        <p class="temperatura"></p>16<span>°C</span><p>
-                        <p class="descricao">Descrição</p>
+                        <img src="images/tempo/limpo.png"">
+                        <p class="temperature"></p>16<span>°C</span><p>
+                        <p class="description">Broken Clouds </p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="detalhes">
-            <div class="humidade">
-                <i class="bx bx-water"></i>
+        <div class="weather-details">
+            <div class="humidity">
+                <i class="bx bx-humidity"></i>
                 <div class="text">
-                    <div class="info-humidade">
+                    <div class="info-humidity">
                         <span>0%</span>
                     </div>
                     <p>Humidade</p>
                 </div>
             </div>
-            <div class="vento">
-                <i class="bx bx-water"></i>
+            <div class="wind">
+                <i class="bx bx-wind"></i>
                 <div class="text">
-                    <div class="info-vento">
+                    <div class="info-wind">
                         <span>0 Km/h</span>
                     </div>
                     <p>Velocidade do vento</p>
                 </div>
             </div>
 
-        </div>
-
-    </div>
+       </div>
+    
     <!--Carregando o JS-->
     <script src="js/script.js"></script>
 </body>
