--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-Lq4fFf2psbW7TwHDStPwbzRbgH2B53lFbJGFVFCTq7RSaGQT8U2w2pLOA+OItWag"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css"/>
+    <!-- Carregando o CSS -->
+    <link rel="stylesheet" href="css/estilo.css" />
+    <!-- Ícone da página -->
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <title>Clima</title>
 </head>
-    <title>Weather</title>
 </head>
+
 <body>
+    <!-- Logo da página -->
+    <img src="images/logo.png" id="logo">
     <div class="container">
         <div class="search-box">
             <i class="bx bxs-map">
@@ -22,17 +32,18 @@
             <input type="text" placeholder="Insira a localização">
             <button class="svg-button">
                 <img src="images/vetores/pesquisar.svg">
-            </button>    
-            <p class="city-hide">city hide</p>
-           
+            </button>
+            <p class="city-hide">Cidade</p>
+
         </div>
         <div class="weather-box">
             <div class="box">
                 <div class="info-weather">
                     <div class="weather">
                         <img src="images/tempo/limpo.png">
-                        <p class="temperature"></p>16<span>°C</span><p>
-                        <p class="description">Broken Clouds </p>
+                        <p class="temperature"></p><span></span>
+                        <p>
+                        <p class="description">Nuvens</p>
                     </div>
                 </div>
             </div>
@@ -46,7 +57,7 @@
                     <div class="info-humidity">
                         <span>0%</span>
                     </div>
-                    <p>Humidade</p>
+                    <p>Umidade</p>
                 </div>
             </div>
             <div class="wind">
@@ -60,15 +71,16 @@
                     <p>Velocidade do vento</p>
                 </div>
             </div>
-       </div>
-       <div class="not-found">
-        <div class="box">
-            <img src="images/erro.png">
-            <p>Oops! Localização não encontrada!</p>
         </div>
-       </div>
-   
-    <!--Carregando o JS-->
-    <script src="js/script.js"></script>
+        <div class="not-found">
+            <div class="box">
+                <img src="images/erro.png">
+                <p>Erro na localização, tente novamente!</p>
+            </div>
+        </div>
+
+        <!--Carregando o JS-->
+        <script src="js/script.js"></script>
 </body>
+
 </html>
